# ai-agent-example

./: .gitignore  README.md  config-example.ini  pyproject.toml
src/agent/: cli.py  config.py  example.py
src/agent/example/: lc_ex1.py  lc_ex2.py
tests/: test_example.py
