[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_agent_example"
description = "AI AGENT 示例"
version = "0.1.0"
authors = [
    { name="cangtan", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ai_agent = "ai_agent.cli:main"